bad/for_void_over_array.example_compiler_output
ERROR
[1mbad/for_void_over_array.lat:4:7: [1;31merror: [0;1mfor iterator `x` cannot have type `void`[m
	for (void x : new int[3]) {}
	     [1;32m^[m
